# HangisiniOgrenmeli

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
hakkinda/: ProjeTemelleri.md
hangidil/: BotConfig.py  __main__.py
hangidil/plugins/: button_test.py  ping.py
hangidil/sessions/: hangi.session
hangidil/utils/: helpers.py
