[tool.poetry]
name = "HangiDil"
version = "0.1.0"
description = ""
authors = ["ahmetveburak <ahmebozyurtt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyrogram = {git = "https://github.com/pyrogram/pyrogram.git", rev = "asyncio"}
tgcrypto = "^1.2.1"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
